style.css
.container{
    display: flex;
    flex-flow: row wrap;
    width: 960px;
}

.box, .select{
    height: 60px;
    width: 60px;
    box-sizing: border-box;
    border: 2px solid black;
    background-color: aqua;
}

.select{
    background-color: gray;
}

